[gd_scene load_steps=11 format=3 uid="uid://k82owcj1rlwy"]

[ext_resource type="PackedScene" uid="uid://8jvobg73j5i2" path="res://scenes/ui/player_list_item.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bqk50nn083vwu" path="res://assets/sprites/ui/escape.png" id="2_wjy4n"]
[ext_resource type="FontFile" uid="uid://biv1xlsmyfcd7" path="res://assets/fonts/kenney_pixel.ttf" id="3"]
[ext_resource type="Script" path="res://scenes/leaderboard.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://coalslu3ntkxa" path="res://assets/sprites/ui/refresh.png" id="6"]
[ext_resource type="Texture2D" uid="uid://7ogox3vjb0su" path="res://assets/sprites/ui/refresh_disabled.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dw5lfe57eftx" path="res://assets/sprites/ui/refresh_pressed.png" id="9"]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("3")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/44/0/ascent = 0.0
cache/0/44/0/descent = 0.0
cache/0/44/0/underline_position = 0.0
cache/0/44/0/underline_thickness = 0.0
cache/0/44/0/scale = 1.0
cache/0/49/0/ascent = 0.0
cache/0/49/0/descent = 0.0
cache/0/49/0/underline_position = 0.0
cache/0/49/0/underline_thickness = 0.0
cache/0/49/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/84/0/ascent = 0.0
cache/0/84/0/descent = 0.0
cache/0/84/0/underline_position = 0.0
cache/0/84/0/underline_thickness = 0.0
cache/0/84/0/scale = 1.0
cache/0/94/0/ascent = 0.0
cache/0/94/0/descent = 0.0
cache/0/94/0/underline_position = 0.0
cache/0/94/0/underline_thickness = 0.0
cache/0/94/0/scale = 1.0
cache/0/114/0/ascent = 0.0
cache/0/114/0/descent = 0.0
cache/0/114/0/underline_position = 0.0
cache/0/114/0/underline_thickness = 0.0
cache/0/114/0/scale = 1.0
cache/0/124/0/ascent = 0.0
cache/0/124/0/descent = 0.0
cache/0/124/0/underline_position = 0.0
cache/0/124/0/underline_thickness = 0.0
cache/0/124/0/scale = 1.0
cache/0/139/0/ascent = 0.0
cache/0/139/0/descent = 0.0
cache/0/139/0/underline_position = 0.0
cache/0/139/0/underline_thickness = 0.0
cache/0/139/0/scale = 1.0
cache/0/164/0/ascent = 0.0
cache/0/164/0/descent = 0.0
cache/0/164/0/underline_position = 0.0
cache/0/164/0/underline_thickness = 0.0
cache/0/164/0/scale = 1.0
cache/0/174/0/ascent = 0.0
cache/0/174/0/descent = 0.0
cache/0/174/0/underline_position = 0.0
cache/0/174/0/underline_thickness = 0.0
cache/0/174/0/scale = 1.0
cache/0/194/0/ascent = 0.0
cache/0/194/0/descent = 0.0
cache/0/194/0/underline_position = 0.0
cache/0/194/0/underline_thickness = 0.0
cache/0/194/0/scale = 1.0
cache/0/199/0/ascent = 0.0
cache/0/199/0/descent = 0.0
cache/0/199/0/underline_position = 0.0
cache/0/199/0/underline_thickness = 0.0
cache/0/199/0/scale = 1.0
cache/0/219/0/ascent = 0.0
cache/0/219/0/descent = 0.0
cache/0/219/0/underline_position = 0.0
cache/0/219/0/underline_thickness = 0.0
cache/0/219/0/scale = 1.0
cache/0/224/0/ascent = 0.0
cache/0/224/0/descent = 0.0
cache/0/224/0/underline_position = 0.0
cache/0/224/0/underline_thickness = 0.0
cache/0/224/0/scale = 1.0
cache/0/239/0/ascent = 0.0
cache/0/239/0/descent = 0.0
cache/0/239/0/underline_position = 0.0
cache/0/239/0/underline_thickness = 0.0
cache/0/239/0/scale = 1.0
cache/0/249/0/ascent = 0.0
cache/0/249/0/descent = 0.0
cache/0/249/0/underline_position = 0.0
cache/0/249/0/underline_thickness = 0.0
cache/0/249/0/scale = 1.0
cache/0/259/0/ascent = 0.0
cache/0/259/0/descent = 0.0
cache/0/259/0/underline_position = 0.0
cache/0/259/0/underline_thickness = 0.0
cache/0/259/0/scale = 1.0
cache/0/269/0/ascent = 0.0
cache/0/269/0/descent = 0.0
cache/0/269/0/underline_position = 0.0
cache/0/269/0/underline_thickness = 0.0
cache/0/269/0/scale = 1.0
cache/0/274/0/ascent = 0.0
cache/0/274/0/descent = 0.0
cache/0/274/0/underline_position = 0.0
cache/0/274/0/underline_thickness = 0.0
cache/0/274/0/scale = 1.0
cache/0/284/0/ascent = 0.0
cache/0/284/0/descent = 0.0
cache/0/284/0/underline_position = 0.0
cache/0/284/0/underline_thickness = 0.0
cache/0/284/0/scale = 1.0
cache/0/299/0/ascent = 0.0
cache/0/299/0/descent = 0.0
cache/0/299/0/underline_position = 0.0
cache/0/299/0/underline_thickness = 0.0
cache/0/299/0/scale = 1.0
cache/0/304/0/ascent = 0.0
cache/0/304/0/descent = 0.0
cache/0/304/0/underline_position = 0.0
cache/0/304/0/underline_thickness = 0.0
cache/0/304/0/scale = 1.0
cache/0/319/0/ascent = 0.0
cache/0/319/0/descent = 0.0
cache/0/319/0/underline_position = 0.0
cache/0/319/0/underline_thickness = 0.0
cache/0/319/0/scale = 1.0
cache/0/324/0/ascent = 0.0
cache/0/324/0/descent = 0.0
cache/0/324/0/underline_position = 0.0
cache/0/324/0/underline_thickness = 0.0
cache/0/324/0/scale = 1.0
cache/0/339/0/ascent = 0.0
cache/0/339/0/descent = 0.0
cache/0/339/0/underline_position = 0.0
cache/0/339/0/underline_thickness = 0.0
cache/0/339/0/scale = 1.0
cache/0/349/0/ascent = 0.0
cache/0/349/0/descent = 0.0
cache/0/349/0/underline_position = 0.0
cache/0/349/0/underline_thickness = 0.0
cache/0/349/0/scale = 1.0
cache/0/359/0/ascent = 0.0
cache/0/359/0/descent = 0.0
cache/0/359/0/underline_position = 0.0
cache/0/359/0/underline_thickness = 0.0
cache/0/359/0/scale = 1.0
cache/0/399/0/ascent = 0.0
cache/0/399/0/descent = 0.0
cache/0/399/0/underline_position = 0.0
cache/0/399/0/underline_thickness = 0.0
cache/0/399/0/scale = 1.0
cache/0/404/0/ascent = 0.0
cache/0/404/0/descent = 0.0
cache/0/404/0/underline_position = 0.0
cache/0/404/0/underline_thickness = 0.0
cache/0/404/0/scale = 1.0
cache/0/409/0/ascent = 0.0
cache/0/409/0/descent = 0.0
cache/0/409/0/underline_position = 0.0
cache/0/409/0/underline_thickness = 0.0
cache/0/409/0/scale = 1.0
cache/0/419/0/ascent = 0.0
cache/0/419/0/descent = 0.0
cache/0/419/0/underline_position = 0.0
cache/0/419/0/underline_thickness = 0.0
cache/0/419/0/scale = 1.0
cache/0/429/0/ascent = 0.0
cache/0/429/0/descent = 0.0
cache/0/429/0/underline_position = 0.0
cache/0/429/0/underline_thickness = 0.0
cache/0/429/0/scale = 1.0
cache/0/439/0/ascent = 0.0
cache/0/439/0/descent = 0.0
cache/0/439/0/underline_position = 0.0
cache/0/439/0/underline_thickness = 0.0
cache/0/439/0/scale = 1.0
cache/0/449/0/ascent = 0.0
cache/0/449/0/descent = 0.0
cache/0/449/0/underline_position = 0.0
cache/0/449/0/underline_thickness = 0.0
cache/0/449/0/scale = 1.0
cache/0/454/0/ascent = 0.0
cache/0/454/0/descent = 0.0
cache/0/454/0/underline_position = 0.0
cache/0/454/0/underline_thickness = 0.0
cache/0/454/0/scale = 1.0
cache/0/459/0/ascent = 0.0
cache/0/459/0/descent = 0.0
cache/0/459/0/underline_position = 0.0
cache/0/459/0/underline_thickness = 0.0
cache/0/459/0/scale = 1.0
cache/0/464/0/ascent = 0.0
cache/0/464/0/descent = 0.0
cache/0/464/0/underline_position = 0.0
cache/0/464/0/underline_thickness = 0.0
cache/0/464/0/scale = 1.0
cache/0/444/0/ascent = 0.0
cache/0/444/0/descent = 0.0
cache/0/444/0/underline_position = 0.0
cache/0/444/0/underline_thickness = 0.0
cache/0/444/0/scale = 1.0
cache/0/434/0/ascent = 0.0
cache/0/434/0/descent = 0.0
cache/0/434/0/underline_position = 0.0
cache/0/434/0/underline_thickness = 0.0
cache/0/434/0/scale = 1.0
cache/0/424/0/ascent = 0.0
cache/0/424/0/descent = 0.0
cache/0/424/0/underline_position = 0.0
cache/0/424/0/underline_thickness = 0.0
cache/0/424/0/scale = 1.0
cache/0/394/0/ascent = 0.0
cache/0/394/0/descent = 0.0
cache/0/394/0/underline_position = 0.0
cache/0/394/0/underline_thickness = 0.0
cache/0/394/0/scale = 1.0
cache/0/384/0/ascent = 0.0
cache/0/384/0/descent = 0.0
cache/0/384/0/underline_position = 0.0
cache/0/384/0/underline_thickness = 0.0
cache/0/384/0/scale = 1.0
cache/0/374/0/ascent = 0.0
cache/0/374/0/descent = 0.0
cache/0/374/0/underline_position = 0.0
cache/0/374/0/underline_thickness = 0.0
cache/0/374/0/scale = 1.0
cache/0/369/0/ascent = 0.0
cache/0/369/0/descent = 0.0
cache/0/369/0/underline_position = 0.0
cache/0/369/0/underline_thickness = 0.0
cache/0/369/0/scale = 1.0
cache/0/354/0/ascent = 0.0
cache/0/354/0/descent = 0.0
cache/0/354/0/underline_position = 0.0
cache/0/354/0/underline_thickness = 0.0
cache/0/354/0/scale = 1.0
cache/0/344/0/ascent = 0.0
cache/0/344/0/descent = 0.0
cache/0/344/0/underline_position = 0.0
cache/0/344/0/underline_thickness = 0.0
cache/0/344/0/scale = 1.0
cache/0/329/0/ascent = 0.0
cache/0/329/0/descent = 0.0
cache/0/329/0/underline_position = 0.0
cache/0/329/0/underline_thickness = 0.0
cache/0/329/0/scale = 1.0
cache/0/314/0/ascent = 0.0
cache/0/314/0/descent = 0.0
cache/0/314/0/underline_position = 0.0
cache/0/314/0/underline_thickness = 0.0
cache/0/314/0/scale = 1.0
cache/0/294/0/ascent = 0.0
cache/0/294/0/descent = 0.0
cache/0/294/0/underline_position = 0.0
cache/0/294/0/underline_thickness = 0.0
cache/0/294/0/scale = 1.0
cache/0/289/0/ascent = 0.0
cache/0/289/0/descent = 0.0
cache/0/289/0/underline_position = 0.0
cache/0/289/0/underline_thickness = 0.0
cache/0/289/0/scale = 1.0
cache/0/279/0/ascent = 0.0
cache/0/279/0/descent = 0.0
cache/0/279/0/underline_position = 0.0
cache/0/279/0/underline_thickness = 0.0
cache/0/279/0/scale = 1.0
cache/0/264/0/ascent = 0.0
cache/0/264/0/descent = 0.0
cache/0/264/0/underline_position = 0.0
cache/0/264/0/underline_thickness = 0.0
cache/0/264/0/scale = 1.0
cache/0/254/0/ascent = 0.0
cache/0/254/0/descent = 0.0
cache/0/254/0/underline_position = 0.0
cache/0/254/0/underline_thickness = 0.0
cache/0/254/0/scale = 1.0
cache/0/244/0/ascent = 0.0
cache/0/244/0/descent = 0.0
cache/0/244/0/underline_position = 0.0
cache/0/244/0/underline_thickness = 0.0
cache/0/244/0/scale = 1.0
cache/0/234/0/ascent = 0.0
cache/0/234/0/descent = 0.0
cache/0/234/0/underline_position = 0.0
cache/0/234/0/underline_thickness = 0.0
cache/0/234/0/scale = 1.0
cache/0/209/0/ascent = 0.0
cache/0/209/0/descent = 0.0
cache/0/209/0/underline_position = 0.0
cache/0/209/0/underline_thickness = 0.0
cache/0/209/0/scale = 1.0
cache/0/179/0/ascent = 0.0
cache/0/179/0/descent = 0.0
cache/0/179/0/underline_position = 0.0
cache/0/179/0/underline_thickness = 0.0
cache/0/179/0/scale = 1.0
cache/0/149/0/ascent = 0.0
cache/0/149/0/descent = 0.0
cache/0/149/0/underline_position = 0.0
cache/0/149/0/underline_thickness = 0.0
cache/0/149/0/scale = 1.0
cache/0/134/0/ascent = 0.0
cache/0/134/0/descent = 0.0
cache/0/134/0/underline_position = 0.0
cache/0/134/0/underline_thickness = 0.0
cache/0/134/0/scale = 1.0
cache/0/119/0/ascent = 0.0
cache/0/119/0/descent = 0.0
cache/0/119/0/underline_position = 0.0
cache/0/119/0/underline_thickness = 0.0
cache/0/119/0/scale = 1.0
cache/0/109/0/ascent = 0.0
cache/0/109/0/descent = 0.0
cache/0/109/0/underline_position = 0.0
cache/0/109/0/underline_thickness = 0.0
cache/0/109/0/scale = 1.0
cache/0/99/0/ascent = 0.0
cache/0/99/0/descent = 0.0
cache/0/99/0/underline_position = 0.0
cache/0/99/0/underline_thickness = 0.0
cache/0/99/0/scale = 1.0
cache/0/79/0/ascent = 0.0
cache/0/79/0/descent = 0.0
cache/0/79/0/underline_position = 0.0
cache/0/79/0/underline_thickness = 0.0
cache/0/79/0/scale = 1.0
cache/0/69/0/ascent = 0.0
cache/0/69/0/descent = 0.0
cache/0/69/0/underline_position = 0.0
cache/0/69/0/underline_thickness = 0.0
cache/0/69/0/scale = 1.0
cache/0/54/0/ascent = 0.0
cache/0/54/0/descent = 0.0
cache/0/54/0/underline_position = 0.0
cache/0/54/0/underline_thickness = 0.0
cache/0/54/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/1/0/ascent = 0.0
cache/0/1/0/descent = 0.0
cache/0/1/0/underline_position = 0.0
cache/0/1/0/underline_thickness = 0.0
cache/0/1/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0

[sub_resource type="Shortcut" id="4"]

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("3"), ExtResource("3"), ExtResource("3")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Leaderboard" type="Control" node_paths=PackedStringArray("loading_panel", "score_list_container", "refresh_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")
loading_panel = NodePath("VBoxContainer/LoadingPanel")
score_list_container = NodePath("VBoxContainer")
refresh_button = NodePath("VBoxContainer/HBoxContainer/Refresh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
color = Color(0.0235294, 0.0235294, 0.0823529, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 34.0
offset_right = -41.0
offset_bottom = -33.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 22)
layout_mode = 2
tooltip_text = "Go to Menu"
action_mode = 0
texture_normal = ExtResource("2_wjy4n")
stretch_mode = 5

[node name="Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = SubResource("5")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]
[wave][rainbow freq=1.5 sat=0.5]LEADERBOARD[/rainbow][/wave][/center]"
fit_content = true
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Refresh" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 22)
layout_mode = 2
tooltip_text = "Refresh Leaderboard"
action_mode = 0
shortcut = SubResource("4")
texture_normal = ExtResource("6")
texture_hover = ExtResource("9")
texture_disabled = ExtResource("8")
stretch_mode = 5
flip_h = true

[node name="PlayerListItem" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="LoadingPanel" type="Panel" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="RichTextLabel" parent="VBoxContainer/LoadingPanel"]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -7.0
offset_bottom = 7.0
theme_override_fonts/normal_font = SubResource("6")
bbcode_enabled = true
text = "LOADING..."
scroll_active = false
meta_underlined = false
deselect_on_focus_loss_enabled = false

[connection signal="visibility_changed" from="." to="." method="on_leaderboard_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Refresh" to="." method="refresh"]
